<resources>
    <string name="app_name">Musiq</string>
    <string name="todo">TODO</string>
    <string name="artist_name">artist name</string>
    <string name="song_name">song name</string>
    <string name="time">3:00</string>
    <string name="upload">Upload</string>
    <string name="song_name_here">Song name here</string>
    <string name="artist_album_name_here">Artist, Album Name here</string>
    <string name="select_thumbnail">Select Thumbnail</string>
    <string name="select_rename_your_song">Select, Rename your song</string>
    <string name="artist_album_name">Artist, album name</string>
    <string name="uploadsong">uploadSong</string>
</resources>